--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -157,6 +157,15 @@ li:hover {
 	border-color: #1D6154;
 	border: 1px solid;
 	cursor: pointer;
+	transition: 0.2s ease-out;
+}
+.btns:focus {
+	color: rgba(255, 254, 248);
+	background-color: #1D6154;
+}
+.btns:hover {
+	transform: scale(98%);
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.1);
 }
 
 .gallery {
@@ -255,6 +264,14 @@ footer nav ul {
 	background-color: white;
 	margin-bottom: 2rem;
 	margin-top: 0.5rem;
+}
+.login-form input:focus {
+	background-color: #12dc6922;
+	border-radius: 5px;
+}
+.login-form .input-error {
+	border: 2px solid rgb(246, 93, 66);
+	background-color: rgba(218, 33, 33, 0.122);
 }
 .btn-submit {
 	font-family: 'Syne';
