--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -3,6 +3,8 @@
    License: none (public domain)
 */
 
+@import "animation.css";
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -27,6 +29,7 @@ time, mark, audio, video {
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
+	animation: fadeInUp 0.3s ease-in-out forwards;
 }
 body {
 	line-height: 1;
@@ -174,6 +177,7 @@ li:hover {
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
+	animation: fadeInUp 1.2s ease-in-out forwards;
 }
 
 .gallery img {
@@ -272,6 +276,7 @@ footer nav ul {
 .login-form .input-error {
 	border: 2px solid rgb(246, 93, 66);
 	background-color: rgba(218, 33, 33, 0.122);
+	animation: errorInput 0.3s ease-out forwards;
 }
 .btn-submit {
 	font-family: 'Syne';
