--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -184,6 +184,21 @@ li:hover {
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.1);
 }
 
+/* Gallerie principale */
+.gallery {
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
+	animation: fadeInUp 1.2s ease-in-out forwards;
+}
+
+.gallery img {
+	width: 100%;
+	margin-bottom: 0.5rem;
+}
+
 /* Modale modifier projets */
 .modal-active {
 	display: block;
@@ -192,7 +207,11 @@ li:hover {
 	display: none;
 }
 .modal-overlay {
-	background-color: rgba(0, 0, 0, 0.6);
+	background: rgba(0, 0, 0, 0.6);
+	/* position: fixed; */
+	/* position: absolute;
+	left: 0;
+	bottom: 0; */
 }
 .modal-gallery {
 	position: fixed;
@@ -204,7 +223,6 @@ li:hover {
 	width: 630px;
 	height: 688px;
 	z-index: 1000;
-	position: relative;
 }
 .modal-gallery .close-btn {
 	position: absolute;
@@ -220,12 +238,43 @@ li:hover {
 	transform: translate(-50%, -50%);
 	font-size: 1.6rem;
 }
+.projects-container {
+	position: fixed;
+	top: 20%;
+	left: 2.7%;
+	display: flex;
+	flex-wrap: wrap;
+	margin-inline: 5.5rem;
+	padding-top: 1.5rem;
+	padding-bottom: 2rem;
+}
+.modal-card {
+	position: relative;
+	padding-bottom: 1.8rem;
+}
+.modal-img {
+	width: 78px;
+	padding-right: 0.5rem;
+}
+.delBtn {
+	position: absolute;
+	background: black;
+	border: 4px solid black;
+	border-radius: 3px;
+	top: 5px;
+	right: 12px;
+	width: 9px;
+	height: auto;
+	cursor: pointer;
+}
+
+
 .line-separator {
 	width: 420px;
 	height: 1px;
 	background-color: rgba(179, 179, 179, 1);
 	position: fixed;
-	bottom: 20%;
+	bottom: 13%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
@@ -241,25 +290,12 @@ li:hover {
 	padding-block: 0.6rem;
 	cursor: pointer;
 	position: fixed;
-	bottom: 5%;
+	bottom: 2%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
 .close-btn {
 	cursor: pointer;
-}
-.gallery {
-	width: 100%;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
-	animation: fadeInUp 1.2s ease-in-out forwards;
-}
-
-.gallery img {
-	width: 100%;
-	margin-bottom: 0.5rem;
 }
 
 /* Contact */
