--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -199,19 +199,18 @@ li:hover {
 	margin-bottom: 0.5rem;
 }
 
-/* Modale modifier projets */
-.modal-active {
-	display: block;
-}
+/* Modale modifer projets */
 .modal-hidden {
 	display: none;
 }
 .modal-overlay {
 	background: rgba(0, 0, 0, 0.6);
-	/* position: fixed; */
-	/* position: absolute;
+	position: fixed;
+	top: 0;
 	left: 0;
-	bottom: 0; */
+	width: 100vw;
+	height: 100vh;
+	z-index: 0;
 }
 .modal-gallery {
 	position: fixed;
@@ -222,7 +221,7 @@ li:hover {
 	border-radius: 10px;
 	width: 630px;
 	height: 688px;
-	z-index: 1000;
+	z-index: 10;
 }
 .modal-gallery .close-btn {
 	position: absolute;
