--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -3,7 +3,7 @@
    License: none (public domain)
 */
 
-@import "animation.css";
+@import url("animation.css");
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -199,104 +199,6 @@ li:hover {
 	margin-bottom: 0.5rem;
 }
 
-/* Modale modifer projets */
-.modal-hidden {
-	display: none;
-}
-.modal-overlay {
-	background: rgba(0, 0, 0, 0.6);
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	height: 100vh;
-	z-index: 0;
-}
-.modal-gallery {
-	position: fixed;
-	top: 0;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background-color: white;
-	border-radius: 10px;
-	width: 630px;
-	height: 688px;
-	z-index: 10;
-}
-.modal-gallery .close-btn {
-	position: absolute;
-	right: 2rem;
-	padding-top: 2rem;
-	width: 12px;
-}
-.modal-gallery .modal-title {
-	text-align: center;
-	position: fixed;
-	top: 12%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	font-size: 1.6rem;
-}
-.projects-container {
-	position: fixed;
-	top: 20%;
-	left: 2.7%;
-	display: flex;
-	flex-wrap: wrap;
-	margin-inline: 5.5rem;
-	padding-top: 1.5rem;
-	padding-bottom: 2rem;
-}
-.modal-card {
-	position: relative;
-	padding-bottom: 1.8rem;
-}
-.modal-img {
-	width: 78px;
-	padding-right: 0.5rem;
-}
-.delBtn {
-	position: absolute;
-	background: black;
-	border: 4px solid black;
-	border-radius: 3px;
-	top: 5px;
-	right: 12px;
-	width: 9px;
-	height: auto;
-	cursor: pointer;
-}
-
-
-.line-separator {
-	width: 420px;
-	height: 1px;
-	background-color: rgba(179, 179, 179, 1);
-	position: fixed;
-	bottom: 13%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-.btn-modal {
-	color: rgba(255, 254, 248);
-	background-color: #1D6154;
-	font-family: 'Syne';
-	font-size: 0.8rem;
-	text-align: center;
-	border-radius: 60px;
-	border: none;
-	padding-inline: 3rem;
-	padding-block: 0.6rem;
-	cursor: pointer;
-	position: fixed;
-	bottom: 2%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-.close-btn {
-	cursor: pointer;
-}
-
 /* Contact */
 #contact {
 	width: 50%;
@@ -348,65 +250,4 @@ footer {
 }
 footer nav ul {
 	margin: 2em;
-}
-
-/* Log in page */
-.login-title {
-	text-align: center;
-	margin-top: 10rem;
-	margin-bottom: 3rem;
-}
-
-.login-form-container {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-.login-form {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-bottom: 1rem;
-}
-.login-form label {
-	align-self: flex-start;
-}
-.login-form input {
-	width: 379px;
-	height: 35px;
-	border: none;
-	box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
-	background-color: white;
-	margin-bottom: 2rem;
-	margin-top: 0.5rem;
-}
-.login-form input:focus {
-	background-color: #12dc6922;
-	border-radius: 5px;
-}
-.login-form .input-error {
-	border: 2px solid rgb(246, 93, 66);
-	background-color: rgba(218, 33, 33, 0.122);
-	animation: errorInput 0.3s ease-out forwards;
-}
-.btn-submit {
-	font-family: 'Syne';
-	font-size: 1rem;
-	width: 179px;
-	text-align: center;
-	border-radius: 60px;
-	padding: 0.5rem;
-	padding-inline: 1.2rem;
-	margin-bottom: 2rem;
-	background-color: #1D6154;
-	color: rgba(255, 254, 248);
-	border: none;
-	cursor: pointer;
-}
-.forgotten-pw {
-	text-decoration: underline;
-	font-weight: 500;
-	cursor: pointer;
-	margin-bottom: 5.5rem;
 }
