--- a/FrontEnd/assets/css/modales.css
+++ b/FrontEnd/assets/css/modales.css
@@ -127,6 +127,15 @@
 	border-radius: 3px;
 	margin-bottom: 1.7rem;
 }
+.img-preview {
+	width: 130px;
+	height: 169px;
+}
+.img-input {
+	opacity: 0;
+	z-index: -1;
+	height: 0.1px;
+}
 .photo-icon {
 	width: 76px;
 	padding-bottom: 1rem;
