--- a/FrontEnd/assets/css/login.css
+++ b/FrontEnd/assets/css/login.css
@@ -34,8 +34,8 @@
 	outline: none;
 }
 .login-form .input-error {
-	border: 2px solid rgb(246, 93, 66);
-	background-color: rgba(218, 33, 33, 0.122);
+	border: 2px solid rgba(246, 93, 66, 0.568);
+	background-color: rgba(209, 162, 162, 0.122);
 	animation: errorInput 0.3s ease-out forwards;
 }
 .btn-submit {
@@ -60,4 +60,7 @@
 	font-weight: 500;
 	cursor: pointer;
 	margin-bottom: 5.5rem;
+}
+footer {
+	bottom: 0;
 }
