--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -65,7 +65,7 @@ body {
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
+	margin-top: 50px
 }
 .insta-logo {
 	height: 1.5rem;
@@ -97,18 +97,16 @@ h2{
 	font-size: 30px;
 	color: #1D6154
 }
-nav ul {
+header nav {
 	display: flex;
 	align-items: center;
 	list-style-type: none;
-
+	font-size: 1rem;
 }
-nav li {
-	padding: 0 10px;
-	font-size: 1.2em;
+nav a {
+	padding: 0 25px;
 }
-
-li:hover {
+nav a:hover {
 	color: #B1663C;
 }
 #introduction {
@@ -247,7 +245,13 @@ footer {
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+	position: absolute;
+	left: 0;
+	right: 0;
 }
 footer nav ul {
 	margin: 2em;
+}
+footer nav:hover {
+	cursor: pointer;
 }
