--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -196,6 +196,10 @@ nav a:hover {
 	width: 100%;
 	margin-bottom: 0.5rem;
 }
+.articles-behind {
+	opacity: 0.4;
+	scroll-behavior: none;
+}
 
 /* Contact */
 #contact {
